# EVO-code

./: .gitignore  AGENTS.md  CHECKLISTS.md  PROJECT.md  README.md  TASKS.md  TOOLS.md  index.html  package.json
ops/: project.json  state.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ChangesView.tsx  ChecklistPanel.tsx  ChecklistView.tsx  DoctorView.tsx  PlanView.tsx  ProjectHome.tsx  RepoRulesPanel.tsx  RepoSelector.tsx  ReviewView.tsx  RunView.tsx  SetupForm.tsx  SetupScreen.tsx  ThreadView.tsx  WarningList.tsx
src/lib/: checklists.ts  repo.ts  setup.ts  tasks.ts  tauri.ts  transport.ts
src/types/: harness.ts
