[package]
name = "harness"
version = "0.1.0"
description = "HARNESS desktop shell"
authors = ["dippo"]
edition = "2021"

[lib]
name = "harness_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
